# datadog-example

./: pyproject.toml  serverless.yml  tracing.py
service/: event_register.py  register.py  send_email.py
